# iFollow

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  alarm.cpp  alarm.hpp  alarmManager.cpp  alarmManager.hpp  main.cpp  tests.cpp  timer.hpp
alarm/: CMakeLists.txt  alarm.cpp  alarm.hpp  alarmManager.cpp
tests/: CMakeLists.txt  tests.cpp
